<resources>
    <string name="app_name">Termobox v1.1</string>
    <string name="bluetooth_on_off">Вкл./Выкл. Bluetooth</string>
    <string name="bluetooth_off">Bluetooth выключен</string>
    <string name="bluetooth_not_supported">Bluetooth не поддерживается</string>
    <string name="disconnect">Отключиться</string>
    <string name="led_red">Красный светодиод</string>
    <string name="led_green">Зелёный светодиод</string>
    <string name="Connecting">Соединение...</string>
    <string name="please_wait">Подождите пожалуйста</string>
    <string name="dont_connect">Не могу соединиться</string>
    <string name="stop_search">Остановить поиск</string>
    <string name="start_search">Начать поиск</string>
    <string name="Programm_Termobox">Программирование Термобокса</string>
    <string name="num_par">Номер параметра</string>
    <string name="acc_lvl">Уровень доступа к параметру</string>
    <string name="value_par">Текущее значение параметра</string>
    <string name="min_val_par">Минимальное значение параметра</string>
    <string name="max_val_par">Максимальное значение параметра</string>
    <string name="def_val">Значение параметра по умолчанию</string>
</resources>
