<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/numPar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_par" />

<TextView
    android:id="@+id/acc_lvl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/acc_lvl"/>

    <TextView
        android:id="@+id/val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_par" />

    <TextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_val_par" />

    <TextView
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_val_par" />

    <TextView
        android:id="@+id/def_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/def_val" />

</LinearLayout>
