<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">



    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_bt"
        android:text="@string/bluetooth_on_off"
        android:textSize="18sp"
        android:textColorHint="@color/color_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/frame_message"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_message"
            android:text="@string/bluetooth_off"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_control"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_marginTop="8dp"
            android:text="@string/start_search"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frameLedControls"
        android:layout_width="match_parent"
        android:layout_height="537dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_info_selector"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/btnStartSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_power_off"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_primary_selector"
            android:text="@string/Programm_Termobox" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_disconnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Device Name"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/temp_RF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/device_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="Заданная температура"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dig_Temp_RF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/device_name"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/temp_PV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_RF"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="Фактическая температура"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dig_Temp_PV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_RF"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/stepN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_PV"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="Номер/ время в шаге"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dig_StepN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_PV"

            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"

            android:layout_toEndOf="@+id/stepN"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dig_Time_StepN"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_PV"
            android:layout_marginStart="60dp"
            android:layout_marginTop="14dp"

            android:layout_toEndOf="@+id/dig_StepN"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_dig_time_min3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_PV"

            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="мин"
            android:layout_toEndOf="@+id/dig_Time_StepN"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_stepN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stepN"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="Общее время цикла"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_dig_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dig_StepN"

            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"

            android:layout_toEndOf="@+id/stepN"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_dig_time_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dig_StepN"

            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="мин"
            android:layout_toEndOf="@+id/total_dig_time"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_dig_left_time"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dig_Time_StepN"
            android:layout_marginStart="60dp"
            android:layout_marginTop="14dp"

            android:layout_toEndOf="@+id/total_dig_time"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_dig_time_min1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dig_StepN"

            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="мин"
            android:layout_toEndOf="@+id/total_dig_left_time"
            android:textColor="@color/color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/power_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_stepN"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Выход регулятора"
            android:textColor="@color/color_black"
            android:textSize="15sp" />


        <ProgressBar
            android:id="@+id/processBar_Power_out"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@id/power_out"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:progressTint="#050505"
            android:layout_width="wrap_content" />

        <ImageView
            android:id="@+id/led_pwr_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/processBar_Power_out"
            android:layout_marginTop="4dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="75dp"
            app:srcCompat="@drawable/ic_baseline_lens_24_heat_on"
            android:contentDescription="TODO"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/led_pwr_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/processBar_Power_out"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="75dp"
            app:srcCompat="@drawable/ic_baseline_lens_24_heat_off"
            android:contentDescription="TODO"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/btn_power_on"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_below="@+id/led_pwr_on"
            android:layout_alignParentStart="true"
            android:layout_marginStart="69dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_power_on"
            android:src="@drawable/ic_baseline_power_on"

            android:text="Включить печку" />

        <ImageButton
            android:id="@+id/btn_power_off"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_below="@+id/led_pwr_off"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"

            android:layout_marginEnd="65dp"
            android:background="@drawable/ic_baseline_power_off"
            android:src="@drawable/ic_baseline_power_off"
            android:text="Выключить печку" />


    </RelativeLayout>

</LinearLayout>